--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+
+        // supportLibVersion = "xxx"
+        playServicesVersion = "18.0.0" // or find latest version
+        androidMapsUtilsVersion = "2.2.3"
     }
     repositories {
         google()
